--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kevin Ocampo - PortFolio</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-white w-screen h-screen">
+    <div id="root" class="bg-white w-full h-full flex flex-col"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
