--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kevin Ocampo - PortFolio</title>
   </head>
-  <body class="bg-white min-w-screen min-h-screen">
-    <div id="root" class="bg-white w-full h-full flex flex-col"></div>
+  <body class="min-h-screen">
+    <div id="root" class="bg-white min-h-screen w-full flex flex-col"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
