--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kevin Ocampo - PortFolio</title>
-  </head>
-  <body class="min-h-screen">
-    <div id="root" class="bg-white min-h-screen w-full flex flex-col"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kevin Ocampo - PortFolio</title>
+  <title>Kevin Ocampo - Portfolio</title>
+  <meta name="description"
+    content="Portafolio de Kevin Ocampo, desarrollador Fullstack con experiencia en React, JavaScript, Node.js, PHP, SQL y más.">
+  <meta name="keywords" content="Kevin Ocampo, portfolio, desarrollador web, React, Node.js, Fullstack, Colombia">
+  <meta name="author" content="Kevin Esneider Ocampo Osorio">
+  <meta name="google-site-verification" content="jdHHuJPK0klRcjgoZjikPjFEGxU5xHCVlIUYiC9NSn4" />
+
+  <!-- Open Graph (para que se vea bien en redes sociales) -->
+  <meta property="og:title" content="Kevin Ocampo - Portfolio">
+  <meta property="og:description" content="Portafolio personal de Kevin Ocampo, desarrollador Fullstack.">
+  <meta property="og:image" content="/preview.png"> <!-- Usa una imagen tuya o screenshot del portfolio -->
+  <meta property="og:url" content="https://kelvinocampo.vercel.app">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Kevin Ocampo - Portfolio">
+  <meta name="twitter:description" content="Desarrollador Fullstack - React, Node.js, PHP">
+  <meta name="twitter:image" content="/preview.png">
+</head>
+
+<body class="min-h-screen">
+  <div id="root" class="bg-white min-h-screen w-full flex flex-col"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
