--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kevin Ocampo - PortFolio</title>
-  <title>Kevin Ocampo - Portfolio</title>
   <meta name="description"
     content="Portafolio de Kevin Ocampo, desarrollador Fullstack con experiencia en React, JavaScript, Node.js, PHP, SQL y más.">
-  <meta name="keywords" content="Kevin Ocampo, portfolio, desarrollador web, React, Node.js, Fullstack, Colombia">
-  <meta name="author" content="Kevin Esneider Ocampo Osorio">
+  <meta name="author" content="Kevin Esneider Ocampo Osorio" />
   <meta name="google-site-verification" content="4w9FxHVvSCjMwHPwHIfKHQ09nrAF6sUzKj7IOmfe078" />
+  <meta name="keywords"
+    content="desarrollador web en Colombia, desarrollador fullstack, aplicaciones web, Kevin Esneider Ocampo Osorio, kelvinocampo, programador">
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://kelvinocampo.vercel.app/" />
+  <!-- Accesibilidad e idioma -->
+  <meta http-equiv="Content-Language" content="es" />
 
   <!-- Open Graph (para que se vea bien en redes sociales) -->
   <meta property="og:title" content="Kevin Ocampo - Portfolio">
   <meta property="og:description" content="Portafolio personal de Kevin Ocampo, desarrollador Fullstack.">
-  <meta property="og:image" content="/preview.png"> <!-- Usa una imagen tuya o screenshot del portfolio -->
+  <!-- <meta property="og:image" content="/preview.png"> Usa una imagen tuya o screenshot del portfolio -->
   <meta property="og:url" content="https://kelvinocampo.vercel.app">
   <meta property="og:type" content="website">
 
@@ -24,7 +28,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Kevin Ocampo - Portfolio">
   <meta name="twitter:description" content="Desarrollador Fullstack - React, Node.js, PHP">
-  <meta name="twitter:image" content="/preview.png">
+  <!-- <meta name="twitter:image" content="/preview.png"> -->
 </head>
 
 <body class="min-h-screen">
