upgrade seo info

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kevin Ocampo - PortFolio</title>
-  <meta name="description"
-    content="Portafolio de Kevin Ocampo, desarrollador Fullstack con experiencia en React, JavaScript, Node.js, PHP, SQL y más.">
   <meta name="author" content="Kevin Esneider Ocampo Osorio" />
   <meta name="google-site-verification" content="4w9FxHVvSCjMwHPwHIfKHQ09nrAF6sUzKj7IOmfe078" />
-  <meta name="keywords"
-    content="desarrollador web en Colombia, desarrollador fullstack, aplicaciones web, Kevin Esneider Ocampo Osorio, kelvinocampo, programador">
   <meta name="robots" content="index, follow" />
+
+  <meta name="description"
+    content="Kevin Ocampo - Kelvinocampo - Desarrollador Fullstack en Colombia. Creación de aplicaciones web modernas y escalables. Disponible para proyectos.">
+
+  <meta name="keywords"
+    content="desarrollador web Colombia, desarrollador fullstack Bogotá, Kevin Esneider Ocampo Osorio, kelvinocampo, React developer, Node.js developer, PHP developer, programador JavaScript, desarrollo de aplicaciones web, TypeScript, bases de datos SQL, API REST, frontend developer, backend developer, portafolio desarrollador, servicios desarrollo web Colombia">
+
   <link rel="canonical" href="https://kelvinocampo.vercel.app/" />
   <!-- Accesibilidad e idioma -->
   <meta http-equiv="Content-Language" content="es" />
