add icons to contact

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <meta name="twitter:title" content="Kevin Ocampo - Portfolio">
   <meta name="twitter:description" content="Desarrollador Fullstack - React, Node.js, PHP">
   <!-- <meta name="twitter:image" content="/preview.png"> -->
+
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body class="min-h-screen">
