minors fixes: - update images to webp - canonical meta tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="keywords"
     content="desarrollador web Colombia, desarrollador fullstack Bogotá, Kevin Esneider Ocampo Osorio, kelvinocampo, React developer, Node.js developer, PHP developer, programador JavaScript, desarrollo de aplicaciones web, TypeScript, bases de datos SQL, API REST, frontend developer, backend developer, portafolio desarrollador, servicios desarrollo web Colombia">
 
-  <link rel="canonical" href="https://kelvinocampo.vercel.app/" />
+  <link rel="canonical" href="https://kelvinocampo.vercel.app" />
   <!-- Accesibilidad e idioma -->
   <meta http-equiv="Content-Language" content="es" />
 
